<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#355eeb">

    <Button
        android:id="@+id/btn_retour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retour_infos"
        android:backgroundTint="#71aae3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_retour"
        app:layout_constraintBottom_toTopOf="@+id/editTextNewNote"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextNewNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_note"
        android:background="@android:drawable/edit_text"
        android:padding="8dp"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajouter"
        android:backgroundTint="#71aae3"
        app:layout_constraintBottom_toBottomOf="@id/editTextNewNote"
        app:layout_constraintTop_toTopOf="@id/editTextNewNote"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
